# pursuer-demo

webgame-game/: Cargo.toml
webgame-game/assets/: p_net.safetensors
webgame-game/assets/levels/: 1.json  2.json  3.json  4.json  template.json
webgame-game/src/: agents.rs  configs.rs  filter.rs  gridworld.rs  lib.rs  main.rs  models.rs  observations.rs  observer.rs  screens.rs  world_objs.rs
webgame-game/src/ui/: menu_button.rs
webgame-ml/webgame/: bench_policies.py  envs.py  filter.py  models.py  train_agents.py
webgame-ml/webgame/algorithms/: ppo.py  rollout_buffer.py
webgame-ml/webgame_rust/: webgame_rust.pyi
webgame-ml/webgame_rust/src/: lib.rs
