[package]
name = "webgame-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
revy = ["dep:revy"]
editor = ["dep:bevy_editor_pls"]

[dependencies]
bevy_rapier2d = "0.25.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
ordered-float = "4.2.0"
rand = "0.8.5"
safetensors = "0.4.2"
serde = { version = "1.0.0", features = ["derive"] }
thiserror = "1.0.56"
revy = { version = "0.14.0", optional = true}
bevy_editor_pls = { version = "0.8.0", optional = true }
serde_json = "1.0"

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
    "bevy_asset",         # Assets management
    #"bevy_audio",         # Builtin audio
    "bevy_gilrs",         # Gamepad input support
    "bevy_scene",         # Scenes management
    "bevy_winit",         # Window management (cross-platform Winit backend)
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_gizmos",        # Support drawing debug lines and shapes
    "bevy_sprite",        # 2D (sprites) rendering
    "bevy_pbr",           # 3D (physically-based) rendering
    "bevy_gltf",          # GLTF 3D assets format support
    "bevy_text",          # Text/font rendering
    "bevy_ui",            # UI toolkit
    "animation",          # Animation support
    "default_font",       # Embed a minimal default font for text/UI
    "webgl2",
    "wayland",
    "tonemapping_luts",
    "png",
]
